[workspace]
members = [
    "lib",
    "simulator",
    "wasm",
    "program",
    "mint",
    "init",
    "server",
]

[workspace.package]
version = "0.1.0"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/aspectron/dnft"


[workspace.dependencies]
# wasm-bindgen-derive = "0.1.0"
async-trait = "0.1.64"
borsh = "0.9.1"
borsh-derive = "0.9.1"
cfg-if = "1.0.0"
clap = { version = "4.1.4", features = ["derive"] }
dnft = { path = "lib" }
inventory = "0.3.3"
js-sys = "0.3.61"
kaizen = { path = "../kaizen" }
num = "0.4.0"
rand = "0.8.5"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
sha2 = "0.10.6"
solana-program = "1.15.1"
solana-sdk = "1.15.1"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ['full'] }
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
workflow-core = { path = "../workflow-rs/core" }
workflow-log = { path = "../workflow-rs/log" }
workflow-panic-hook = { path = "../workflow-rs/panic-hook" }
workflow-rpc = { path = "../workflow-rs/rpc" }
workflow-wasm = { path = "../workflow-rs/wasm" }
workflow-store = { path = "../workflow-rs/store" }
workflow-http = { path = "../workflow-http" }
tide = "0.16.0"
async-std = {version = "1.12.0", features = ["attributes"]}
http-types = {version = "2.12.0", features=[]}
multipart = "0.18.0"
mime = "0.3.16"
