[package]
name = "dnft"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh-derive.workspace = true
borsh.workspace = true
cfg-if.workspace = true
js-sys.workspace = true
kaizen.workspace = true
serde.workspace = true
solana-program.workspace = true
workflow-core.workspace = true
workflow-log.workspace = true
workflow-wasm.workspace = true
workflow-store.workspace = true
wasm-bindgen.workspace = true

[target.'cfg(not(target_os = "solana"))'.dependencies]
serde-wasm-bindgen.workspace = true
inventory.workspace = true
num.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
wasm-bindgen-futures.workspace = true
solana-sdk.workspace = true