[package]
name = "dnft-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide.workspace = true
async-std.workspace = true
rand.workspace = true
serde.workspace = true
http-types.workspace = true
multipart.workspace = true
mime.workspace = true
dnft.workspace = true
