[package]
name = "dnft-wasm"
description = "Delta NFT - WASM Bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aspectron/dnft"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kaizen.workspace = true
dnft.workspace = true
workflow-panic-hook.workspace = true
